Bug 425178 - Docker is spewing UdevQt: unhandled device action "move"
Summary: Docker is spewing UdevQt: unhandled device action "move"
Status: RESOLVED FIXED
Alias: None
Product: frameworks-solid
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.72.0
Platform: openSUSE Linux
: NOR minor
Target Milestone: ---
Assignee: Lukáš Tinkl
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-08-10 06:34 UTC by Andreas Nordal
Modified: 2021-07-12 12:52 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Nordal 2020-08-10 06:34:56 UTC
While running `docker build`, this error message appears multiple times:

    UdevQt: unhandled device action "move"

STEPS TO REPRODUCE

1. Put this in a Dockerfile in its own directory:

    FROM alpine:3.8
    RUN echo hello
    RUN echo world

2. Run `docker build .` from within the directory

OBSERVED RESULT

    Sending build context to Docker daemon  2.048kB
    Step 1/3 : FROM alpine:3.8
    ---> c8bccc0af957
    Step 2/3 : RUN echo hello
    ---> Running in b2857dfcbb26
    hello
    UdevQt: unhandled device action "move"
    Removing intermediate container b2857dfcbb26
    ---> 75635d880095
    Step 3/3 : RUN echo world
    ---> Running in 8718e2e15b17
    world
    UdevQt: unhandled device action "move"
    Removing intermediate container 8718e2e15b17
    ---> 84fa6aaab150
    Successfully built 84fa6aaab150

EXPECTED RESULT
The «UdevQt: unhandled device action "move"» lines should obviously not be there.

ADDITIONAL INFORMATION
The message comes from /usr/lib64/libKF5Solid.so.5.72.0.
The only other occurrence of the error message on my system is in /usr/lib64/qt5/plugins/kf5/powerdevil/powerdevilupowerbackend.so, but by editing both binaries, I could determine that it was from Solid.
Comment 1 Rajeesh K V 2021-01-26 12:30:27 UTC
This message is also seen when connecting a USB modem. It seems to show up when usb_modeswitch runs. Relevant excerpts from journal below:

Jan 26 17:55:38 cherry kernel: usb 1-4: new high-speed USB device number 4 using xhci_hcd
Jan 26 17:55:38 cherry kernel: usb 1-4: New USB device found, idVendor=12d1, idProduct=1f01, bcdDevice= 1.02
Jan 26 17:55:38 cherry kernel: usb 1-4: New USB device strings: Mfr=1, Product=2, SerialNumber=3
Jan 26 17:55:38 cherry kernel: usb 1-4: Product: HUAWEI_MOBILE
Jan 26 17:55:38 cherry kernel: usb 1-4: Manufacturer: HUAWEI_MOBILE
Jan 26 17:55:38 cherry kernel: usb 1-4: SerialNumber: 0123456789ABCDEF
Jan 26 17:55:38 cherry mtp-probe[2113]: checking bus 1, device 4: "/sys/devices/pci0000:00/0000:00:14.0/usb1/1-4"
Jan 26 17:55:38 cherry mtp-probe[2113]: bus: 1, device: 4 was not an MTP device
Jan 26 17:55:38 cherry systemd[1]: Created slice system-usb_modeswitch.slice.
Jan 26 17:55:38 cherry systemd[1]: Starting USB_ModeSwitch_1-4:1.0...
Jan 26 17:55:38 cherry kernel: usb-storage 1-4:1.0: USB Mass Storage device detected
Jan 26 17:55:38 cherry kernel: scsi host4: usb-storage 1-4:1.0
Jan 26 17:55:38 cherry kernel: usbcore: registered new interface driver usb-storage
Jan 26 17:55:38 cherry kernel: usbcore: registered new interface driver uas
Jan 26 17:55:38 cherry mtp-probe[2130]: checking bus 1, device 4: "/sys/devices/pci0000:00/0000:00:14.0/usb1/1-4"
Jan 26 17:55:38 cherry mtp-probe[2130]: bus: 1, device: 4 was not an MTP device
Jan 26 17:55:39 cherry usb_modeswitch[2132]: switch device 12d1:1f01 on 001/004
Jan 26 17:55:39 cherry kernel: usb 1-4: USB disconnect, device number 4
Jan 26 17:55:40 cherry kernel: usb 1-4: new high-speed USB device number 5 using xhci_hcd
Jan 26 17:55:40 cherry kernel: usb 1-4: New USB device found, idVendor=12d1, idProduct=14dc, bcdDevice= 1.02
Jan 26 17:55:40 cherry kernel: usb 1-4: New USB device strings: Mfr=1, Product=2, SerialNumber=0
Jan 26 17:55:40 cherry kernel: usb 1-4: Product: HUAWEI_MOBILE
Jan 26 17:55:40 cherry kernel: usb 1-4: Manufacturer: HUAWEI_MOBILE
Jan 26 17:55:40 cherry kernel: usb-storage 1-4:1.2: USB Mass Storage device detected
Jan 26 17:55:40 cherry kernel: scsi host4: usb-storage 1-4:1.2
Jan 26 17:55:40 cherry mtp-probe[2137]: checking bus 1, device 5: "/sys/devices/pci0000:00/0000:00:14.0/usb1/1-4"
Jan 26 17:55:40 cherry mtp-probe[2137]: bus: 1, device: 5 was not an MTP device
Jan 26 17:55:40 cherry kernel: cdc_ether 1-4:1.0 eth0: register 'cdc_ether' at usb-0000:00:14.0-4, CDC Ethernet Device, 0c:5b:8f:27:9a:64
Jan 26 17:55:40 cherry NetworkManager[676]: <info>  [1611663940.3692] manager: (eth0): new Ethernet device (/org/freedesktop/NetworkManager/Devices/3)
Jan 26 17:55:40 cherry kernel: usbcore: registered new interface driver cdc_ether
Jan 26 17:55:40 cherry root[2141]: usb_modeswitch: switched to 12d1:14dc on 001/005
Jan 26 17:55:40 cherry mtp-probe[2143]: checking bus 1, device 5: "/sys/devices/pci0000:00/0000:00:14.0/usb1/1-4"
Jan 26 17:55:40 cherry mtp-probe[2143]: bus: 1, device: 5 was not an MTP device
Jan 26 17:55:40 cherry systemd-udevd[2127]: Using default interface naming scheme 'v245'.
Jan 26 17:55:40 cherry systemd-udevd[2127]: ethtool: autonegotiation is unset or enabled, the speed and duplex are not writable.
Jan 26 17:55:40 cherry kernel: cdc_ether 1-4:1.0 enp0s20f0u4: renamed from eth0
Jan 26 17:55:40 cherry NetworkManager[676]: <info>  [1611663940.3864] device (eth0): interface index 3 renamed iface from 'eth0' to 'enp0s20f0u4'
Jan 26 17:55:40 cherry NetworkManager[676]: <info>  [1611663940.3952] device (enp0s20f0u4): state change: unmanaged -> unavailable (reason 'managed', sys-iface-state: 'external')
Jan 26 17:55:40 cherry NetworkManager[676]: <info>  [1611663940.3956] device (enp0s20f0u4): carrier: link connected
Jan 26 17:55:40 cherry NetworkManager[676]: <info>  [1611663940.3967] device (enp0s20f0u4): state change: unavailable -> disconnected (reason 'none', sys-iface-state: 'managed')
Jan 26 17:55:40 cherry NetworkManager[676]: <info>  [1611663940.3982] device (enp0s20f0u4): state change: disconnected -> unavailable (reason 'carrier-changed', sys-iface-state: 'managed')
Jan 26 17:55:40 cherry systemd-udevd[2126]: Using default interface naming scheme 'v245'.
Jan 26 17:55:40 cherry plasmashell[986]: UdevQt: unhandled device action "move"
Jan 26 17:55:40 cherry org_kde_powerdevil[1022]: UdevQt: unhandled device action "move"
Jan 26 17:55:40 cherry systemd[1]: usb_modeswitch@1-4:1.0.service: Succeeded.
Jan 26 17:55:40 cherry systemd[1]: Finished USB_ModeSwitch_1-4:1.0.
Jan 26 17:55:40 cherry audit[1]: SERVICE_START pid=1 uid=0 auid=4294967295 ses=4294967295 msg='unit=usb_modeswitch@1-4:1.0 comm="systemd" exe="/usr/lib/systemd/systemd" hostname=? addr=? terminal=? res=success'
Jan 26 17:55:40 cherry audit[1]: SERVICE_STOP pid=1 uid=0 auid=4294967295 ses=4294967295 msg='unit=usb_modeswitch@1-4:1.0 comm="systemd" exe="/usr/lib/systemd/systemd" hostname=? addr=? terminal=? res=success'
Jan 26 17:55:40 cherry kernel: audit: type=1130 audit(1611663940.881:216): pid=1 uid=0 auid=4294967295 ses=4294967295 msg='unit=usb_modeswitch@1-4:1.0 comm="systemd" exe="/usr/lib/systemd/systemd" hostname=? addr=? terminal=? res=success'
Jan 26 17:55:40 cherry kernel: audit: type=1131 audit(1611663940.881:217): pid=1 uid=0 auid=4294967295 ses=4294967295 msg='unit=usb_modeswitch@1-4:1.0 comm="systemd" exe="/usr/lib/systemd/systemd" hostname=? addr=? terminal=? res=success'
Jan 26 17:55:41 cherry kernel: scsi 4:0:0:0: Direct-Access     HUAWEI   TF CARD Storage  2.31 PQ: 0 ANSI: 2
Jan 26 17:55:41 cherry kernel: sd 4:0:0:0: Attached scsi generic sg1 type 0
Jan 26 17:55:41 cherry kernel: sd 4:0:0:0: Power-on or device reset occurred
Jan 26 17:55:41 cherry kernel: sd 4:0:0:0: [sdb] Attached SCSI removable disk
Jan 26 17:55:42 cherry ModemManager[567]: <info>  [base-manager] couldn't check support for device '/sys/devices/pci0000:00/0000:00:14.0/usb1/1-4': not supported by any plugin
Jan 26 17:55:47 cherry NetworkManager[676]: <info>  [1611663947.5345] device (enp0s20f0u4): carrier: link connected
Jan 26 17:55:47 cherry NetworkManager[676]: <info>  [1611663947.5351] device (enp0s20f0u4): state change: unavailable -> disconnected (reason 'carrier-changed', sys-iface-state: 'managed')
Comment 2 Sergey 2021-05-31 17:04:16 UTC
I see the same in a regular Qt GUI application without docker. But docker works on the same machine for other tasks.

wrt USB I have only USB wireless mouse and whatever built-in into my MSI GL75 9SDK laptop.

Last time I saw it, my dmesg was populated with next entries approximately the same time:

[234633.368717] docker0: port 1(veth3446d1d) entered disabled state
[234633.368939] vethbed7499: renamed from eth0
[234633.395120] docker0: port 1(veth3446d1d) entered disabled state
[234633.398863] device veth3446d1d left promiscuous mode
[234633.398867] docker0: port 1(veth3446d1d) entered disabled state
Comment 3 Bug Janitor Service 2021-07-08 11:11:36 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/solid/-/merge_requests/46
Comment 4 Ahmad Samir 2021-07-12 12:52:39 UTC
Git commit cde78318129bcdb13726525fb33167f5f48c6c32 by Ahmad Samir.
Committed on 12/07/2021 at 12:51.
Pushed by ahmadsamir into branch 'master'.

Udev client: replace a warning message with a debug one

There is nothing the user can do about a udev device action, "move", that
Solid doesn't support.

Also use debugging categories.

M  +3    -1    src/solid/devices/backends/shared/udevqtclient.cpp

https://invent.kde.org/frameworks/solid/commit/cde78318129bcdb13726525fb33167f5f48c6c32