Udev client: replace a warning message with a debug one

There is nothing the user can do about a udev device action, "move", that
Solid doesn't support.

Also use debugging categories.

BUG: 425178